tests/fiaas_deploy_daemon/e2e_expected/tls-networkingv1-ingress.yml

# Copyright 2017-2019 The FIAAS Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fiaas/expose: "false"
    kubernetes.io/tls-acme: "true"
  labels:
    app: v3-data-examples-tls-enabled
    fiaas/deployed_by: ""
    fiaas/deployment_id: DEPLOYMENT_ID
    fiaas/version: VERSION
  name: v3-data-examples-tls-enabled
  namespace: default
  ownerReferences:
    - apiVersion: fiaas.schibsted.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Application
      name: v3-data-examples-tls-enabled
  finalizers: []
spec:
  tls:
  - hosts:
    - pckqvxryazy6fkalse7zoudilpf43dkb.svc.test.example.com
    - v3-data-examples-tls-enabled.svc.test.example.com
    secretName: v3-data-examples-tls-enabled-ingress-tls
  rules:
  - host: v3-data-examples-tls-enabled.svc.test.example.com
    http:
      paths:
      - backend:
          service:
            name: v3-data-examples-tls-enabled
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
